[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rgcn-fusion"
version = "0.1.0"
description = "Train r-GCN models on Neo4j knowledge graphs to produce Dempster-Shafer evidence masses."
requires-python = ">=3.10"
dependencies = [
  "neo4j>=5.20",
  "numpy>=1.24",
  "PyYAML>=6.0",
  "torch>=2.2",
]

[project.scripts]
rgcn-fusion-train = "rgcn_fusion.train:main"

[tool.setuptools.packages.find]
include = ["rgcn_fusion*"]
